set dice icon flex-shrink 0 to prevent disappearing when line too long

--- a/src/app/minigame/dice.module.scss
+++ b/src/app/minigame/dice.module.scss
@@ -6,6 +6,7 @@ $blockSize: 116px / 2;
   height: $blockSize;
   background-image: url(/images/dice.png);
   background-size: $blockSize * 2 $blockSize;
+  flex-shrink: 0;
 }
 
 .dice_145 {
